HERMES 2017-03-31
 - Fixed an error leading to calculate the PSI over incorrect frequencies (Thanks, Victor López).
 - Disabled PSI calculation for resting-state data.

HERMES 2016-01-28
 - Fixed some errors in the cluster based permutation test.
   * Fixed a minor bug in H_statisticsCBPT causing the program to fail when the number of permutations is 1.
   * Fixed an error in H_statisticsCBPT underestimating the significancy in one unit (as if the number of permutations was an unit less than the real).
   * Fixed an error causing CBPT to fail when comparing two groups and the number of sensors is different from 148.

HERMES 2015-10-16
 - Fixed a minor bug in HERMES_statistics rising an error when the statistcs' configuration button is pressed in Matlab 2014b or newer.

HERMES 2015-09-16
 - Added the license text in some files to fully comply with the GNU/GPL license.

HERMES 2015-05-06
 - Modified the GS parameters window to issue a warning, instead of an error, when the parameters are, according with the criteria of the program, incorrect.
   * This is usefull specially when using data largely oversampled, for example to calculate the GS in band delta (maximum frequency of 4 Hz) of a signal sampled at 250 Hz (maximum frequency of 125 Hz).

HERMES 2015-04-14
 - Modified the code so the logo of HERMES is displayed using the 'image' function instead of the 'imshow' function.
   * This should make unnecesary the use of the 'Image processing' toolbox.
 - Modified some issues with HERMES' children windows.
   * Matlab seems to have broken the modal windows in Linux.
     If you use Linux and a version newer than 2014a, please *do not select another Matlab window* when a HERMES window appears.
     If you do so, Matlab execution will probably hang.
     We are trying to fix this.

HERMES 2015-04-13
 - Fixed a bug in H_filtfilt causing an error when the length of the data is odd (Thanks, Thomas).